--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,30 @@
 <!doctype html>
 <html>
+  <head>
+    <style>
+    .button {
+  	  background-color: #555555; 
+	  border: none;
+	  color: white;
+	  padding: 15px 32px;
+	  text-align: center;
+	  text-decoration: none;
+	  display: inline-block;
+	  font-size: 15px;
+	  margin: 4px 2px;
+	  cursor: pointer;
+	  -webkit-transition-duration: 0.4s;
+	  transition-duration: 0.4s;
+    }
+
+    .button:hover {
+      box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+    }
+    </style>
+  </head>
   <body>
-	<p>Visit me at <a href="https://github.com/secretdataz">GitHub.com/secretdataz</a>
+    <a href="http://lolhelperth.garenanow.com/" target="_blank" class="button">Open LoL Assist</a>
+	<p>Source code: <a href="https://github.com/secretdataz">GitHub.com/secretdataz/LoLHelperTHUA</a>
   </body>
 </html>
 
